--- a/projects.html
+++ b/projects.html
@@ -83,6 +83,21 @@
                         <span class="tag">Concurrency</span>
                     </div>
                 </div>
+                   <div class="project-card">
+                    <div class="project-header">
+                        <h3>ft_irc</h3>
+                        <a href="https://github.com/Toowan0x1/ft_irc" class="github-link" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                    <p>Implemented an Internet Relay Chat (IRC) server from scratch in C++. This project involved socket programming, network protocols, and concurrent programming to create a functioning IRC server that adheres to RFC standards.</p>
+                    <div class="project-tags">
+                        <span class="tag">C++</span>
+                        <span class="tag">Sockets</span>
+                        <span class="tag">Network Programming</span>
+                        <span class="tag">Concurrency</span>
+                    </div>
+                </div>
             </div>
         </section>
 
