--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>0x_Jeff | software Developer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="resume-button.css">
     <link rel="icon" href="public/favicon.ico?v=2" type="image/x-icon">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,6 +36,15 @@
         <section class="bio">
             <h2>Hi, my name is abdallah jeftani. 👨‍💻|🎧🧘🎾🏋️‍♂️|🍵</h2>
             <p>A software Developer student at <a href="https://www.1337.ma" target="_blank" class="school-link">1337</a>  🧑‍🎓</p>
+            
+            <div class="resume-button-container">
+                <a href="resume.pdf" download class="resume-button">
+                    <span class="resume-icon">
+                        <i class="fas fa-file-download"></i>
+                    </span>
+                    <span class="resume-text">Download Resume</span>
+                </a>
+            </div>
         </section>
 
     </div>
