--- a/projects.html
+++ b/projects.html
@@ -199,7 +199,7 @@
           <div class="project-header">
             <h3>React Projects</h3>
             <a
-              href="https://github.com/Jemeni11/Scrimba-React-Projects"
+              href="https://github.com/0xJeff1/react_apps"
               class="github-link"
               target="_blank"
               rel="noopener noreferrer"
@@ -220,7 +220,7 @@
           </ul>
           <div class="preview-link" style="margin-bottom: 0.8rem;">
             <a
-              href="https://jemeni11.github.io/Scrimba-React-Projects/"
+              href="https://react-apps-qair-8718v6ike-mikanika373-gmailcoms-projects.vercel.app"
               target="_blank"
               rel="noopener noreferrer"
               ><i class="fas fa-external-link-alt"></i> Live Preview</a
@@ -381,7 +381,7 @@
         },
         scrimbaReact: {
           title: "Scrimba React Projects",
-          github: "https://github.com/Jemeni11/Scrimba-React-Projects",
+          github: "https://github.com/0xJeff1/react_apps",
           description:
             "A collection of hands-on React projects built following Scrimba's \"Learn React\" course. Each project highlights key React concepts such as hooks, props, component architecture, and API interaction.",
           tags: ["React", "JavaScript", "HTML", "CSS", "Vite"],
