--- a/projects.html
+++ b/projects.html
@@ -213,6 +213,7 @@
           </p>
           <ul class="project-list" style="padding-left: 1.2rem; margin: 1rem 0;">
             <li><strong>Meme Generator:</strong> Create memes with random images and custom text using an API and form state.</li>
+            <li><strong>chef Claude:</strong> Chef Claude is a React-based web application that uses AI to help users generate personalized recipes. Users can input ingredients or preferences, and the app suggests creative meals powered by AI. It demonstrates foundational React concepts like JSX and components, along with API integration, dynamic rendering, and styled UI components.</li>
             <li><strong>Airbnb Clone:</strong> Static listing layout mimicking Airbnb UI with reusable components.</li>
             <li><strong>Digital Business Card:</strong> Build a digital profile card using JSX and props.</li>
             <li><strong>Travel Journal:</strong> Render travel entries dynamically with React components and styling.</li>
