--- a/projects.html
+++ b/projects.html
@@ -221,7 +221,7 @@
           </ul>
           <div class="preview-link" style="margin-bottom: 0.8rem;">
             <a
-              href="https://react-apps-qair-8718v6ike-mikanika373-gmailcoms-projects.vercel.app"
+              href="https://react-apps-qair-git-main-mikanika373-gmailcoms-projects.vercel.app/"
               target="_blank"
               rel="noopener noreferrer"
               ><i class="fas fa-external-link-alt"></i> Live Preview</a
